--- a/Dicee-iOS13/Base.lproj/Main.storyboard
+++ b/Dicee-iOS13/Base.lproj/Main.storyboard
@@ -20,63 +20,81 @@
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="GreenBackground" translatesAutoresizingMaskIntoConstraints="NO" id="XGt-vF-rIU">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                             </imageView>
-                            <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="8am-Fw-BXL" userLabel="TopView">
-                                <rect key="frame" x="0.0" y="34" width="414" height="264"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="60I-51-h4o">
+                                <rect key="frame" x="0.0" y="52" width="414" height="810"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" image="DiceeLogo" translatesAutoresizingMaskIntoConstraints="NO" id="WtM-I8-a8k">
-                                        <rect key="frame" x="87" y="68" width="240" height="128"/>
-                                    </imageView>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8am-Fw-BXL" userLabel="TopView">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="270"/>
+                                        <subviews>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="DiceeLogo" translatesAutoresizingMaskIntoConstraints="NO" id="WtM-I8-a8k">
+                                                <rect key="frame" x="109" y="71" width="196" height="128"/>
+                                            </imageView>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstItem="WtM-I8-a8k" firstAttribute="centerY" secondItem="8am-Fw-BXL" secondAttribute="centerY" id="UvU-zA-yDC"/>
+                                            <constraint firstItem="WtM-I8-a8k" firstAttribute="centerX" secondItem="8am-Fw-BXL" secondAttribute="centerX" id="flN-Nn-svb"/>
+                                        </constraints>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JPM-aD-Kct" userLabel="MiddleView">
+                                        <rect key="frame" x="0.0" y="270" width="414" height="270"/>
+                                        <subviews>
+                                            <stackView opaque="NO" contentMode="scaleToFill" spacing="50" translatesAutoresizingMaskIntoConstraints="NO" id="sZh-ds-iCQ">
+                                                <rect key="frame" x="82" y="85" width="250" height="100"/>
+                                                <subviews>
+                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="DiceOne" translatesAutoresizingMaskIntoConstraints="NO" id="OhA-wj-cDk">
+                                                        <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                                                    </imageView>
+                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="DiceOne" translatesAutoresizingMaskIntoConstraints="NO" id="Nyq-so-xfc">
+                                                        <rect key="frame" x="150" y="0.0" width="100" height="100"/>
+                                                    </imageView>
+                                                </subviews>
+                                            </stackView>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstItem="sZh-ds-iCQ" firstAttribute="centerX" secondItem="JPM-aD-Kct" secondAttribute="centerX" id="AXo-yy-a50"/>
+                                            <constraint firstItem="sZh-ds-iCQ" firstAttribute="centerY" secondItem="JPM-aD-Kct" secondAttribute="centerY" id="uHH-oz-83m"/>
+                                        </constraints>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="akZ-C6-Z7j" userLabel="BottomView">
+                                        <rect key="frame" x="0.0" y="540" width="414" height="270"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lgq-it-gqg">
+                                                <rect key="frame" x="157" y="110" width="100" height="50"/>
+                                                <color key="backgroundColor" red="0.55686277149999996" green="0.1607843041" blue="0.14509806040000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="100" id="N26-Xj-doe"/>
+                                                    <constraint firstAttribute="height" constant="50" id="tzR-oC-hkt"/>
+                                                </constraints>
+                                                <color key="tintColor" systemColor="tintColor"/>
+                                                <state key="normal" title="Button"/>
+                                                <buttonConfiguration key="configuration" style="plain" title="Roll">
+                                                    <fontDescription key="titleFontDescription" type="system" pointSize="30"/>
+                                                    <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                </buttonConfiguration>
+                                                <connections>
+                                                    <action selector="rollButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="bh9-Ow-MVK"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstItem="lgq-it-gqg" firstAttribute="centerY" secondItem="akZ-C6-Z7j" secondAttribute="centerY" id="Elh-Ic-gsq"/>
+                                            <constraint firstItem="lgq-it-gqg" firstAttribute="centerX" secondItem="akZ-C6-Z7j" secondAttribute="centerX" id="llr-L2-2yk"/>
+                                        </constraints>
+                                    </view>
                                 </subviews>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <constraints>
-                                    <constraint firstItem="WtM-I8-a8k" firstAttribute="centerY" secondItem="8am-Fw-BXL" secondAttribute="centerY" id="UvU-zA-yDC"/>
-                                    <constraint firstItem="WtM-I8-a8k" firstAttribute="centerX" secondItem="8am-Fw-BXL" secondAttribute="centerX" id="flN-Nn-svb"/>
-                                </constraints>
-                            </view>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="JPM-aD-Kct" userLabel="MiddleView">
-                                <rect key="frame" x="30" y="368" width="352" height="160"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="DiceOne" translatesAutoresizingMaskIntoConstraints="NO" id="OhA-wj-cDk">
-                                        <rect key="frame" x="20" y="20" width="120" height="120"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                    </imageView>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="DiceOne" translatesAutoresizingMaskIntoConstraints="NO" id="Nyq-so-xfc">
-                                        <rect key="frame" x="212" y="20" width="120" height="120"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                    </imageView>
-                                </subviews>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                            </view>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="akZ-C6-Z7j" userLabel="BottomView">
-                                <rect key="frame" x="132" y="638" width="150" height="105"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lgq-it-gqg">
-                                        <rect key="frame" x="20" y="20" width="110" height="65"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <color key="backgroundColor" red="0.55686277149999996" green="0.1607843041" blue="0.14509806040000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                        <color key="tintColor" systemColor="tintColor"/>
-                                        <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="plain" title="Roll">
-                                            <fontDescription key="titleFontDescription" type="system" pointSize="30"/>
-                                            <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        </buttonConfiguration>
-                                        <connections>
-                                            <action selector="rollButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="bh9-Ow-MVK"/>
-                                        </connections>
-                                    </button>
-                                </subviews>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                            </view>
+                            </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstAttribute="bottom" secondItem="XGt-vF-rIU" secondAttribute="bottom" id="FSW-TZ-c3u"/>
+                            <constraint firstItem="60I-51-h4o" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="Flz-p9-o9t"/>
+                            <constraint firstItem="60I-51-h4o" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="8" id="MCx-JO-J1T"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="60I-51-h4o" secondAttribute="bottom" id="S4p-td-OYK"/>
                             <constraint firstItem="XGt-vF-rIU" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="Xe9-Cr-XJB"/>
                             <constraint firstItem="XGt-vF-rIU" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailing" id="jmb-pd-5Im"/>
                             <constraint firstItem="XGt-vF-rIU" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="lO5-lb-goU"/>
+                            <constraint firstItem="60I-51-h4o" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="x08-Gd-ouu"/>
                         </constraints>
                     </view>
                     <connections>
